--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build:sass": "webpack --config ./12.Sass/webpack.config.js",
     "build:stylus": "webpack --config ./13.Stylus/webpack.config.js",
     "build:less": "webpack --config ./14.Less/webpack.config.js",
-    "build:post-css": "webpack --config ./15.PostCss/webpack.config.js"
+    "build:post-css": "webpack --config ./15.PostCss/webpack.config.js",
+    "build:prevent-duplication": "webpack --config ./16.Prevent-duplications/webpack.config.js"
   },
   "keywords": [
     "WebPack"
